[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["Guilhem Saurel <guilhem.saurel@laas.fr>"]
description = "Gepetto Software Development Dashboard"
license = "BSD-2-Clause"
name = "dashboard"
version = "0.1.0"

[tool.poetry.dependencies]
GitPython = "^3.1.44"
PyGithub = "^2.5.0"
django = "^5.1.5"
django-auth-ldap = "^5.1.0"
django-filter = "^24.3"
django-tables2 = "^2.7.5"
djangorestframework = "^3.15.2"
hiredis = "^3.1.0"
httpx = "^0.28.1"
ipython = "^8.31.0"
ndh = "^6.9.2"
python = "^3.10"
python-gitlab = "^5.3.1"
redis = "^5.2.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
coverage = "^7.6.1"
pre-commit = "^4.0.0"
ruff = "^0.2.1"

[tool.poetry.group.noprod]
optional = true

[tool.poetry.group.noprod.dependencies]
psycopg2-binary = "^2.9.9"

[tool.poetry.group.prod]
optional = true

[tool.poetry.group.prod.dependencies]
gunicorn = "^23.0.0"
psycopg2 = "^2.9.9"

[tool.ruff]
extend-exclude = ["migrations"]
target-version = "py310"

[tool.ruff.lint]
extend-ignore = ["D203", "D213"]
extend-select = ["A", "B", "C", "COM", "DJ", "EM", "EXE", "G", "N", "PTH", "RET", "RUF", "UP", "W", "YTT"]

[tool.tomlsort]
all = true
