[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["Guilhem Saurel <guilhem.saurel@laas.fr>"]
description = "Gepetto Software Development Dashboard"
license = "BSD-2-Clause"
name = "dashboard"
version = "0.1.0"

[tool.poetry.dependencies]
GitPython = "^3.1.44"
PyGithub = "^2.6.1"
django = "^5.2.9"
django-auth-ldap = "^5.2.0"
django-filter = "^25.1"
django-tables2 = "^2.7.5"
djangorestframework = "^3.16.0"
hiredis = "^3.1.1"
httpx = "^0.28.1"
ipython = [
  {python = ">=3.10,<3.11", version = "^8.36.0"},
  {python = ">=3.11,<4.0", version = "^9.2.0"}
]
ndh = "^6.10.1"
python = "^3.10"
python-gitlab = "^5.6.0"
redis = "^6.1.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
coverage = "^7.8.0"
pre-commit = "^4.2.0"
ruff = "^0.11.9"

[tool.poetry.group.noprod]
optional = true

[tool.poetry.group.noprod.dependencies]
psycopg2-binary = "^2.9.10"

[tool.poetry.group.prod]
optional = true

[tool.poetry.group.prod.dependencies]
gunicorn = "^23.0.0"
psycopg2 = "^2.9.10"

[tool.ruff]
extend-exclude = ["migrations"]
target-version = "py310"

[tool.ruff.lint]
extend-ignore = ["D203", "D213"]
extend-select = ["A", "B", "C", "COM", "DJ", "EM", "EXE", "G", "N", "PTH", "RET", "RUF", "UP", "W", "YTT"]

[tool.tomlsort]
all = true
